# mycompress-media_compressor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  MILESTONE.md  PROJECT_SPEC.md  PROMPTS.md  README.id.md  README.md  ROADMAP_MVP.md  TASKS.md  docker-compose.yml  package-lock.json
backend/: .coverage  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes_audio.py  routes_health.py  routes_image.py  routes_jobs.py  routes_video.py
backend/app/core/: __init__.py
backend/app/db/: __init__.py  database.py  job_repository.py  metric_repository.py  models.py
backend/app/infra/: cleanup.py  ffmpeg_runner.py  file_validation.py  storage.py
backend/app/middleware/: error_handler.py
backend/app/schemas/: audio.py  common.py  image.py  video.py
backend/app/services/: audio_service.py  image_service.py  job_service.py  video_service.py
backend/app/utils/: exceptions.py  service_helpers.py  timing.py
backend/tests/: conftest.py
backend/tests/integration/: test_audio_routes.py  test_cors.py  test_error_handler.py  test_health.py  test_image_routes.py  test_jobs_routes.py  test_video_routes.py
backend/tests/unit/: test_aes_cipher.py  test_audio_bitrate.py  test_audio_lsb.py  test_audio_service.py  test_common_metrics.py  test_compression_base.py  test_exceptions.py  test_file_validation.py  test_image_huffman.py  test_image_lsb.py  test_image_metrics.py  test_image_rle.py  test_job_service.py  test_registry.py  test_schemas_common.py  test_schemas_image.py  (+7 more)
(+93 files in other folders)
